<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorAccentLight"
                    android:ems="10"
                    android:hint="Recipe name"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/colorTextOnP"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/recipePrepTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@color/colorAccentLight"
                    android:ems="10"
                    android:hint="Prep time in minutes"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/colorTextOnP"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeName" />

                <TextView
                    android:id="@+id/recipeServingSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorAccentLight"
                    android:ems="10"
                    android:hint="Serving size"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/colorTextOnP"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipePrepTime" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="Prep time:"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextOnP"
                    app:layout_constraintEnd_toStartOf="@+id/recipePrepTime"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipeName" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="28dp"
                    android:text="Servings:"
                    android:textSize="18sp"
                    android:textColor="@color/colorTextOnP"
                    app:layout_constraintEnd_toStartOf="@+id/recipeServingSize"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingredients"
                android:textColor="@color/colorTextOnP"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_see_recipe_ingredients"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description/Steps"
                android:textColor="@color/colorTextOnP"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/recipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccentLight"
                android:textColor="@color/colorTextOnP"
                android:padding="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tags"
                android:textColor="@color/colorTextOnP"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/recipeTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccentLight"
                android:textColor="@color/colorTextOnP"
                android:padding="10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <Button
                    android:id="@+id/see_recipe_delete_recipe"
                    android:layout_width="151dp"
                    android:layout_height="47dp"
                    android:text="Delete recipe"
                    android:textColor="@color/colorTextOnP"
                    android:background="#0000"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/see_recipe_make_recipe"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.155" />

                <Button
                    android:id="@+id/see_recipe_make_recipe"
                    android:layout_width="151dp"
                    android:layout_height="47dp"
                    android:text="Make recipe"
                    android:textAllCaps="false"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorTextOnP"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/see_recipe_delete_recipe"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.155" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>