<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    tools:context=".views.FragmentRandom">

    <ImageView
        android:id="@+id/loginImageView2"
        android:layout_width="154dp"
        android:layout_height="146dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64"
        app:srcCompat="@drawable/recipes" />

    <Button
        android:id="@+id/random_do_random_from_internet"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="From the web"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextOnP"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

    <Button
        android:id="@+id/random_do_random"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="From cook book"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextOnP"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/random_go_to_recipe"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/random_go_to_recipe"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="Open recipe"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextOnP"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/random_do_random"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <FrameLayout
            android:id="@+id/random_recipe_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:background="@drawable/rounded_corners_piece_schedule"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/add_tag_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/rounded_corners_color_secondary">

                <TextView
                    android:id="@+id/random_recipe_prepTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="PrepTime"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextOnA"
                    app:layout_constraintEnd_toStartOf="@+id/random_recipe_serving"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/random_recipe_name" />

                <TextView
                    android:id="@+id/random_recipe_serving"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="ServingSize"
                    android:textColor="@color/colorTextOnA"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/random_recipe_prepTime"
                    app:layout_constraintTop_toBottomOf="@+id/random_recipe_name" />

                <TextView
                    android:id="@+id/random_recipe_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="35dp"
                    android:text="Here goes a recipe name"
                    android:textColor="@color/colorTextOnA"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:translationZ="90dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="292dp"
        android:layout_height="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="Let me help you choose"
        android:textSize="20dp"
        android:textColor="@color/colorTextOnP"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginImageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>