...
    <item
        android:id="@+id/grocery"
        android:title="Grocery"
        android:icon="@drawable/grocery"
        />
    <item
        android:id="@+id/random"
        android:title="Random"
        android:icon="@drawable/random"
        />
</menu>
